[gd_scene format=3 uid="uid://coi0aaf0blylp"]

[ext_resource type="Script" uid="uid://biy4tuxuk8wvh" path="res://item_tooltip.gd" id="1_qv4pa"]
[ext_resource type="Texture2D" uid="uid://bte0emgv2j52w" path="res://inventory_atlas_bg.tres" id="2_v5fep"]
[ext_resource type="FontFile" uid="uid://ks1eppo680hw" path="res://fonts/PixelPurl.ttf" id="3_b75xq"]
[ext_resource type="FontFile" uid="uid://d1n7hf5mk3x61" path="res://fonts/MedodicaRegular.otf" id="5_o2ajn"]

[node name="ItemTooltip" type="NinePatchRect" unique_id=1723446741]
texture_filter = 1
custom_minimum_size = Vector2(160, 0)
offset_right = 160.0
offset_bottom = 88.0
texture = ExtResource("2_v5fep")
patch_margin_left = 6
patch_margin_top = 6
patch_margin_right = 6
patch_margin_bottom = 6
script = ExtResource("1_qv4pa")

[node name="MarginContainer" type="MarginContainer" parent="." unique_id=762789842]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer" unique_id=1890280267]
layout_mode = 2
theme_override_constants/separation = 2

[node name="HeaderHBox" type="HBoxContainer" parent="MarginContainer/VBoxContainer" unique_id=857288472]
layout_mode = 2
theme_override_constants/separation = 4

[node name="ItemIcon" type="TextureRect" parent="MarginContainer/VBoxContainer/HeaderHBox" unique_id=392903030]
custom_minimum_size = Vector2(16, 16)
layout_mode = 2
expand_mode = 1
stretch_mode = 5

[node name="TitleVBox" type="VBoxContainer" parent="MarginContainer/VBoxContainer/HeaderHBox" unique_id=144880155]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 0

[node name="ItemName" type="Label" parent="MarginContainer/VBoxContainer/HeaderHBox/TitleVBox" unique_id=818248910]
texture_filter = 1
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 0
theme_override_colors/font_color = Color(0.24313726, 0.12156863, 0.11372549, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 2
theme_override_fonts/font = ExtResource("3_b75xq")
theme_override_font_sizes/font_size = 12
text = "Espada de Madeira"

[node name="ItemType" type="Label" parent="MarginContainer/VBoxContainer/HeaderHBox/TitleVBox" unique_id=1743032812]
texture_filter = 1
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(0.3764706, 0.22352941, 0.15686275, 1)
theme_override_fonts/font = ExtResource("5_o2ajn")
theme_override_font_sizes/font_size = 8
text = "Arma Corpo-a-corpo"

[node name="HSeparator1" type="HSeparator" parent="MarginContainer/VBoxContainer" unique_id=319589363]
layout_mode = 2
theme_override_constants/separation = 2

[node name="ItemRarity" type="Label" parent="MarginContainer/VBoxContainer" unique_id=952274075]
texture_filter = 1
layout_mode = 2
theme_override_colors/font_color = Color(0.3764706, 0.22352941, 0.15686275, 1)
theme_override_fonts/font = ExtResource("5_o2ajn")
theme_override_font_sizes/font_size = 8
text = "Raridade: Comum"

[node name="ItemStats" type="Label" parent="MarginContainer/VBoxContainer" unique_id=1987651054]
texture_filter = 1
layout_mode = 2
theme_override_colors/font_color = Color(0.24313726, 0.12156863, 0.11372549, 1)
theme_override_fonts/font = ExtResource("5_o2ajn")
theme_override_font_sizes/font_size = 8
text = "Peso: 2.5 | Valor: 15 Ouro
Dano BÃ´nus: +10"
autowrap_mode = 2

[node name="HSeparator2" type="HSeparator" parent="MarginContainer/VBoxContainer" unique_id=788813352]
layout_mode = 2
theme_override_constants/separation = 2

[node name="ItemDescription" type="RichTextLabel" parent="MarginContainer/VBoxContainer" unique_id=583641403]
texture_filter = 1
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/default_color = Color(0.3764706, 0.22352941, 0.15686275, 1)
theme_override_fonts/normal_font = ExtResource("5_o2ajn")
theme_override_font_sizes/normal_font_size = 8
text = "Uma espada velha de madeira."
fit_content = true
scroll_active = false
autowrap_mode = 2
